deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: awesome-deployment 
  labels:
    app: simple-server

spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-server
  template:
    metadata:
      labels:
        app: simple-server
    spec:
      containers:
      - name: simple-server
        image: refringerator/simple-server:latest
        ports:
        - containerPort: 8000
        livenessProbe:
          exec:
            command:
              - sh 
              - -c
              - \[ $(pidof nc) -gt 50 \]
          initialDelaySeconds: 25
          periodSeconds: 25
        readinessProbe:
          exec:
            command:
              - sh 
              - -c
              - ps -o comm | grep -q nc
          initialDelaySeconds: 5
          periodSeconds: 5
