service.yml
apiVersion: v1
kind: Service 
metadata:
  name: cool-service 
spec:
  type: NodePort
  selector:
    app: simple-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
