ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: ngx-ingress 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "arch.homework"
    http:
      paths:
      - path: /path
        pathType: Prefix
        backend:
          service:
            name: cool-service 
            port:
              number: 80
